# ChaosForge

./: .gitignore  README.md  pyproject.toml
data/cvpr/: frequency2022.json  frequency2023.json  papers2022.json
environments/: Dockerfile
environments/ci/: docker-compose.yaml
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
notebooks/: gradcam.ipynb
src/cvpr/: parser.py
src/cvpr/scripts/: count_word_frequency.py  generate_wordcloud.py  parse_cvf_page.py
src/plotly/: README.md  dash_feature_test.py  plots_visualizer.py  visualizer.py
src/streamlit/: app.py
